# seanmyers.xyz

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: pages.yml
docs/: CNAME  index.html
docs/.perseus/: bundle.wasm
docs/.perseus/static/styles/: index.css
docs/perseus/: bundle.js
docs/perseus/page/xx-XX/: index.json
docs/perseus/static/styles/: index.css
src/: lib.rs
src/templates/: index.rs
static/styles/: index.css
