[package]
name = "seanmyers-xyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = { version = "0.3.59" }
log = { version = "0.4.17" }
perseus = { version = "0.3.5" }
reqwasm = { version = "0.5.0" }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = { version = "1.0.83" }
sycamore = { version = "0.8.2" }
ureq = { version = "2.5.0" }
wasm-bindgen = { version = "0.2.82" }
web-sys = { version = "0.3.59", features = [
	"Event",
	"EventTarget",
	"HtmlDocument",
] }
